# aldrin

./: Cargo.toml  README.md  deny.toml
aldrin/: CHANGELOG.md  Cargo.toml
aldrin/src/: bus_listener.rs  call.rs  channel.rs  client.rs  client_builder.rs  discoverer.rs  error.rs  event.rs  events.rs  function_call_map.rs  function_fallback.rs  handle.rs  lib.rs  lifetime.rs  low_level.rs  object.rs  pending_reply.rs  private.rs  promise.rs  property.rs  reply.rs  serial_map.rs  service.rs  test.rs  unknown_call.rs  unknown_event.rs
aldrin/src/bus_listener/: test.rs
aldrin/src/channel/: builder.rs  established.rs  pending.rs  test.rs  unbound.rs  unclaimed.rs
aldrin/src/client/: broker_subscriptions.rs  proxies.rs  select.rs
aldrin/src/client_builder/: test.rs
aldrin/src/discoverer/: any.rs  builder.rs  entry.rs  event.rs  specific.rs  specific_with_services.rs  specific_without_services.rs  test.rs
aldrin/src/events/: test.rs
aldrin/src/handle/: request.rs
aldrin/src/lifetime/: test.rs
aldrin/src/low_level/: call.rs  channel.rs  event.rs  event_listener.rs  events.rs  pending_reply.rs  promise.rs  proxy.rs  reply.rs  service.rs  service_info.rs  test.rs
aldrin/src/service/: test.rs
broker/: CHANGELOG.md  Cargo.toml
broker/fuzz/: .gitignore  Cargo.toml
broker/fuzz/fuzz_targets/: broker.rs  context.rs  message_le.rs  runtime.rs  serial_le.rs  uuid_le.rs  value_epoch.rs
broker/src/: acceptor.rs  broker.rs  bus_listener.rs  conn.rs  conn_id.rs  introspection_database.rs  lib.rs  serial_map.rs  versioned_message.rs
channel/: Cargo.toml
client/: Cargo.toml
client/src/: bus_listener.rs  channel.rs  client.rs  discoverer.rs  error.rs  events.rs  handle.rs  lib.rs  object.rs  objects.rs  serial_map.rs  service.rs  services.rs  test.rs
codegen/: CHANGELOG.md  Cargo.toml
codegen/src/: error.rs  lib.rs  rust.rs  util.rs
codegen/test/: all_types.aldrin  before_derive_compat.aldrin  channels.aldrin  enum_fallback.aldrin  extern.aldrin  generic_struct.aldrin  introspection.aldrin  newtype.aldrin  old_new.aldrin  options.aldrin  raw_identifiers.aldrin  result.aldrin  subscribe_all.aldrin  unit.aldrin
conformance-test-broker/: Cargo.toml
conformance-test-broker/src/: main.rs
conformance-test-shared/: Cargo.toml
conformance-test-shared/src/: broker.rs  client.rs  lib.rs  test.rs
conformance-tester/: Cargo.toml
conformance-tester/src/: broker.rs  bus_listener.rs  client.rs  client_id.rs  context.rs  main.rs  message.rs  message_type.rs  output.rs  protocol_version_serde.rs  run.rs  run_error.rs  serial.rs  test.rs  util.rs  uuid_ref.rs  value.rs
conformance-tester/tests/: abort-call-1.json  abort-call-2.json  abort-call-by-disconnect.json  abort-call-old-callee.json  abort-call-old-version.json  abort-invalid-call.json  call-function-aborted.json  call-function-err.json  call-function-invalid-args.json  call-function-invalid-service.json  call-function-ok.json  call-function.json  call-function2-denied.json  call-function2-with-version-new-client.json  call-function2-with-version-old-client.json  call-function2-without-version-new-client.json  call-function2-without-version-old-client.json  call-invalid-function.json  channel-capacity-overflow-1.json  channel-capacity-overflow-2.json  claim-invalid-receiver.json  claim-invalid-sender.json  claim-receiver-after-close.json  claim-receiver-already-claimed.json  claim-receiver-ok.json  claim-sender-after-close.json  claim-sender-already-claimed.json  claim-sender-ok.json  close-foreign-receiver.json  close-foreign-sender.json  close-invalid-receiver.json  close-invalid-sender.json  close-receiver-ok.json  close-receiver-with-sender-claimed.json  close-sender-ok.json  close-sender-with-receiver-claimed.json  connect-15-on-14.json  connect-and-disconnect.json  connect-and-shutdown.json  connect-ok.json  (+74 more)
core/: CHANGELOG.md  Cargo.toml
core/fuzz/: Cargo.toml
core/src/: adapters.rs  buf_ext.rs  bus_listener.rs  bytes.rs  channel.rs  channel_end.rs  convert_value.rs  deserialize.rs  deserialize_key.rs  deserializer.rs  enum_fallback.rs  error.rs  generic_value.rs  ids.rs  impls.rs  introspection.rs  introspection_v2.rs  key_impls.rs  key_tag.rs  lib.rs  message.rs  message_deserializer.rs  primary_tag.rs  protocol_version.rs  serialize.rs  serialize_key.rs  serialized_value.rs  serializer.rs  service_info.rs  tag.rs  tags.rs  test.rs  tokio.rs  transport.rs  unknown_fields.rs  unknown_variant.rs  value.rs  value_deserializer.rs  value_kind.rs  value_serializer.rs
examples/bookmarks/: Cargo.toml  README.md
examples/broker/: Cargo.toml  README.md
examples/downloader/: Cargo.toml  README.md
examples/echo/: Cargo.toml  README.md
examples/foo/: Cargo.toml
examples/introspect/: Cargo.toml  README.md
examples/media-player/: Cargo.toml  README.md
examples/rust/: Cargo.toml
macros/: CHANGELOG.md  Cargo.toml
macros/schemas/: example1-rename-again.patch  example1-rename.patch  example4.aldrin
macros/src/: codegen.rs  derive.rs  doc_string.rs  lib.rs  service.rs  test.rs
parser/: CHANGELOG.md  Cargo.toml  grammar.pest
parser/fuzz/: Cargo.toml
parser/schemas/: duplicate_id.aldrin
parser/src/: ast.rs  diag.rs  error.rs  fmt.rs  issues.rs  lib.rs  link_resolver.rs  parser.rs  resolver.rs  schema.rs  span.rs  test.rs  util.rs  validate.rs  warning.rs
proto/: Cargo.toml
proto-macros/: Cargo.toml
proto-macros/src/: de.rs  lib.rs  options.rs
proto/benches/: all_messages.rs  benches.rs  big_value.rs  vec_i32.rs
proto/fuzz/: Cargo.toml
proto/src/: buf_ext.rs  bus_listener.rs  channel.rs  channel_end.rs  deserialize_key.rs  error.rs  generic_value.rs  ids.rs  lib.rs  message.rs  message_deserializer.rs  message_serializer.rs  serialize_key.rs  serialized_value.rs  tokio.rs  transport.rs  value.rs  value_deserializer.rs  value_serializer.rs
rust/aldrin/: Cargo.toml
rust/broker/: Cargo.toml  LICENSE
rust/channel/: Cargo.toml
rust/client/: Cargo.toml
test/: CHANGELOG.md  Cargo.toml
test/examples/: calculator.aldrin
test/src/: lib.rs  tokio.rs  tokio_based.rs  transport.rs
(+1137 files in other folders)
