[workspace]
members = [
    "aldrin",
    "broker",
    "codegen",
    "conformance-test-broker",
    "conformance-tester",
    "core",
    "examples/broker",
    "examples/downloader",
    "examples/echo",
    "examples/introspect",
    "gen",
    "macros",
    "parser",
    "test",
]
resolver = "2"

[workspace.package]
authors = ["Aldrin Contributors"]
categories = [
    "asynchronous",
    "network-programming",
]
edition = "2021"
keywords = [
    "async",
    "network",
    "rpc",
    "service",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dennis-hamester/aldrin"
rust-version = "1.71.1"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.dependencies]
anstyle = { version = "1.0.7", default-features = false }
colorchoice-clap = { version = "1.0.4", default-features = false }
futures-channel = { version = "0.3.31", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
heck = { version = "0.4.1", default-features = false }
serde = { version = "1.0.193", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
tokio = { version = "1.34.0", default-features = false }
uuid = { version = "1.6.1", default-features = false }

[workspace.dependencies.anstream]
version = "0.6.18"
default-features = false
features = ["auto"]

[workspace.dependencies.anyhow]
version = "1.0.75"
default-features = false
features = ["std"]

[workspace.dependencies.clap]
version = "4.4.8"
default-features = false
features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
]
