[workspace]
members = [
    "aldrin",
    "broker",
    "codegen",
    "conformance-test-broker",
    "conformance-tester",
    "core",
    "examples/bookmarks",
    "examples/broker",
    "examples/downloader",
    "examples/echo",
    "examples/introspect",
    "examples/media-player",
    "gen",
    "macros",
    "parser",
    "test",
]
resolver = "3"

[workspace.package]
categories = [
    "asynchronous",
    "network-programming",
]
edition = "2024"
keywords = [
    "async",
    "network",
    "rpc",
    "service",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dennis-hamester/aldrin"
rust-version = "1.92.0"

[workspace.lints.rust]
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
cast_lossless = "deny"
cast_possible_wrap = "deny"
checked_conversions = "deny"
clone_on_copy = "deny"
collapsible_else_if = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
if_not_else = "deny"
ignored_unit_patterns = "deny"
incompatible_msrv = "deny"
items_after_statements = "deny"
manual_assert = "deny"
manual_let_else = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
needless_borrow = "deny"
needless_continue = "deny"
needless_pass_by_value = "deny"
non_std_lazy_statics = "deny"
ptr_as_ptr = "deny"
ref_as_ptr = "deny"
return_self_not_must_use = "deny"
semicolon_if_nothing_returned = "deny"
trivially_copy_pass_by_ref = "deny"
unnecessary_cast = "deny"
unnecessary_map_or = "deny"
unnecessary_semicolon = "deny"
unnecessary_wraps = "deny"
unreadable_literal = "deny"
unused_async = "deny"
unused_self = "deny"
use_self = "deny"
wildcard_enum_match_arm = "deny"
wrong_self_convention = "deny"

[workspace.dependencies]
anstyle = { version = "1.0.13", default-features = false }
colorchoice-clap = { version = "1.0.7", default-features = false }
comrak = { version = "0.49.0", default-features = false }
diffy = { version = "0.4.2", default-features = false }
futures-channel = { version = "0.3.31", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
heck = { version = "0.5.0", default-features = false }
terminal_size = { version = "0.4.3", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.49.0", default-features = false }
uuid = { version = "1.19.0", default-features = false }

[workspace.dependencies.anstream]
version = "0.6.21"
default-features = false
features = ["auto"]

[workspace.dependencies.anyhow]
version = "1.0.100"
default-features = false
features = ["std"]

[workspace.dependencies.clap]
version = "4.5.54"
default-features = false
features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
]

[workspace.dependencies.serde]
version = "1.0.228"
default-features = false
features = [
    "derive",
    "std",
]
