[package]
name = "aldrin"
description = "Message bus for service-oriented RPC and interprocess communication."
version = "0.13.0"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
channel = ["aldrin-core/channel"]
introspection = ["aldrin-core/introspection"]
macros = [
    "dep:aldrin-macros",
    "dep:async-trait",
]
new-v4-ids = ["aldrin-core/new-v4-ids"]
serde = [
    "aldrin-core/serde",
    "dep:serde",
]
sink = ["dep:futures-sink"]
tokio = ["aldrin-core/tokio"]

[lints]
workspace = true

[dependencies]
futures-core = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

[dependencies.aldrin-core]
version = "0.13.0"
path = "../core"
default-features = false
features = ["new-v4-ids"]

[dependencies.aldrin-macros]
optional = true
version = "0.13.0"
path = "../macros"
default-features = false

[dependencies.async-trait]
workspace = true
optional = true

[dependencies.futures-channel]
workspace = true
features = ["std"]

[dependencies.futures-sink]
optional = true
version = "0.3.31"
default-features = false

[dependencies.serde]
workspace = true
optional = true

[dependencies.uuid]
workspace = true
features = ["v4"]

[dev-dependencies.aldrin-broker]
path = "../broker"
default-features = false
features = ["statistics"]

[dev-dependencies.aldrin-core]
path = "../core"
default-features = false
features = ["channel"]

[dev-dependencies.aldrin-test]
path = "../test"
default-features = false
features = ["tokio"]

[dev-dependencies.futures-util]
workspace = true
features = ["sink"]

[dev-dependencies.tokio]
workspace = true
features = [
    "macros",
    "rt-multi-thread",
    "time",
]
