[package]
name = "aldrin"
description = "Message bus for service-oriented RPC and interprocess communication."
version = "0.4.1"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
channel = ["aldrin-core/channel"]
codegen = ["dep:aldrin-macros"]
new-v4-ids = ["aldrin-core/new-v4-ids"]
sink = ["dep:futures-sink"]
tokio = ["aldrin-core/tokio"]

[dependencies.aldrin-core]
version = "0.4.1"
path = "../core"
default-features = false
features = ["new-v4-ids"]

[dependencies.aldrin-macros]
optional = true
version = "0.4.0"
path = "../macros"
default-features = false

[dependencies.futures-channel]
version = "0.3.29"
default-features = false
features = ["std"]

[dependencies.futures-core]
version = "0.3.29"
default-features = false

[dependencies.futures-sink]
optional = true
version = "0.3.29"
default-features = false

[dependencies.futures-util]
version = "0.3.29"
default-features = false

[dependencies.thiserror]
version = "1.0.69"
default-features = false

[dependencies.uuid]
version = "1.6.1"
default-features = false
features = ["v4"]

[dev-dependencies.aldrin-broker]
path = "../broker"
default-features = false

[dev-dependencies.aldrin-core]
path = "../core"
features = ["channel"]

[dev-dependencies.aldrin-test]
path = "../test"
features = ["tokio"]

[dev-dependencies.futures]
version = "0.3.29"
default-features = false

[dev-dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "rt-multi-thread",
    "time",
]
