[package]
name = "aldrin-broker"
description = """
Broker library of Aldrin, a message bus for service-oriented RPC and interprocess communication.
"""
version = "0.6.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
channel = ["aldrin-core/channel"]
introspection = [
    "aldrin-core/introspection",
    "dep:rand",
]
serde = ["aldrin-core/serde"]
statistics = []
tokio = ["aldrin-core/tokio"]

[dependencies.aldrin-core]
version = "0.6.0"
path = "../core"
default-features = false
features = ["new-v4-ids"]

[dependencies.futures-channel]
version = "0.3.29"
default-features = false
features = [
    "sink",
    "std",
]

[dependencies.futures-core]
version = "0.3.29"
default-features = false

[dependencies.futures-util]
version = "0.3.29"
default-features = false
features = ["sink"]

[dependencies.rand]
optional = true
version = "0.8.5"
default-features = false
features = [
    "std",
    "std_rng",
]

[dependencies.thiserror]
version = "1.0.50"
default-features = false

[dev-dependencies]
anyhow = "1.0.75"

[dev-dependencies.aldrin]
path = "../aldrin"

[dev-dependencies.aldrin-core]
path = "../core"
features = [
    "channel",
    "tokio",
]

[dev-dependencies.aldrin-test]
path = "../test"
features = ["tokio"]

[dev-dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
]
