[package]
name = "aldrin-broker"
description = """
Broker library of Aldrin, a message bus for service-oriented RPC and interprocess communication.
"""
version = "0.7.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
channel = ["aldrin-core/channel"]
introspection = [
    "aldrin-core/introspection",
    "dep:rand",
]
serde = ["aldrin-core/serde"]
statistics = []
tokio = ["aldrin-core/tokio"]

[dependencies]
futures-core = { workspace = true }
thiserror = { workspace = true }

[dependencies.aldrin-core]
workspace = true
features = ["new-v4-ids"]

[dependencies.futures-channel]
workspace = true
features = [
    "sink",
    "std",
]

[dependencies.futures-util]
workspace = true
features = ["sink"]

[dependencies.rand]
optional = true
version = "0.8.5"
default-features = false
features = [
    "std",
    "std_rng",
]

[dev-dependencies]
aldrin = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies.aldrin-core]
workspace = true
features = [
    "channel",
    "tokio",
]

[dev-dependencies.aldrin-test]
workspace = true
features = ["tokio"]

[dev-dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
]
