[package]
name = "aldrin-channel"
description = "Aldrin transports based on in-process channels."
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies.aldrin-proto]
version = "0.1.0"
path = "../proto"
default-features = false

[dependencies.futures-channel]
version = "0.3.21"
default-features = false

[dependencies.futures-core]
version = "0.3.21"
default-features = false

[dev-dependencies.aldrin-broker]
version = "0.1.0"
path = "../broker"

[dev-dependencies.aldrin-client]
version = "0.1.0"
path = "../client"

[dev-dependencies.futures]
version = "0.3.21"
default-features = false

[dev-dependencies.tokio]
version = "1.27.0"
features = [
    "macros",
    "rt-multi-thread",
]
