[package]
name = "aldrin-client"
description = """
Client library of Aldrin, a message bus for service-oriented RPC and interprocess communication.
"""
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"

[features]
codegen = ["dep:aldrin-macros"]
sink = ["dep:futures-sink"]

[dependencies.aldrin-macros]
optional = true
version = "0.1.0"
path = "../macros"
default-features = false

[dependencies.aldrin-proto]
version = "0.1.0"
path = "../proto"
default-features = false
features = ["new-v4-ids"]

[dependencies.futures-channel]
version = "0.3.21"
default-features = false
features = ["std"]

[dependencies.futures-core]
version = "0.3.21"
default-features = false

[dependencies.futures-sink]
optional = true
version = "0.3.21"
default-features = false

[dependencies.futures-util]
version = "0.3.21"
default-features = false

[dependencies.uuid]
version = "1.1.2"
default-features = false
features = ["v4"]

[dev-dependencies.aldrin-proto]
version = "0.1.0"
path = "../proto"
features = ["channel"]

[dev-dependencies.aldrin-test]
version = "0.1.0"
path = "../test"
features = ["tokio"]

[dev-dependencies.futures]
version = "0.3.21"
default-features = false

[dev-dependencies.tokio]
version = "1.27.0"
features = [
    "macros",
    "rt-multi-thread",
    "time",
]
