[package]
name = "aldrin-codegen"
description = "Aldrin code generator library."
version = "0.12.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
default = ["rust"]
rust = []

[lints]
workspace = true

[dependencies]
comrak = { workspace = true }
diffy = { workspace = true }
heck = { workspace = true }
thiserror = { workspace = true }

[dependencies.aldrin-parser]
version = "0.12.0"
path = "../parser"
default-features = false

[dev-dependencies]
futures-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies.aldrin]
path = "../aldrin"
default-features = false
features = [
    "codegen",
    "introspection",
]

[dev-dependencies.aldrin-test]
path = "../test"
default-features = false
features = ["tokio"]

[dev-dependencies.tokio]
workspace = true
features = [
    "macros",
    "rt",
]
