[package]
name = "aldrin-codegen"
description = "Aldrin code generator library."
version = "0.4.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
default = ["rust"]
rust = []

[dependencies.aldrin-parser]
version = "0.4.0"
path = "../parser"
default-features = false

[dependencies.diffy]
version = "0.3.0"
default-features = false

[dependencies.heck]
version = "0.4.1"
default-features = false

[dependencies.thiserror]
version = "1.0.69"
default-features = false

[dev-dependencies]
uuid = "1.6.1"

[dev-dependencies.aldrin]
path = "../aldrin"
features = ["codegen"]

[dev-dependencies.aldrin-test]
path = "../test"
features = ["tokio"]

[dev-dependencies.futures]
version = "0.3.29"
default-features = false

[dev-dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "rt",
]
