[package]
name = "conformance-test-broker"
description = "Host for aldrin-broker conformance tests."
version = "0.0.0"
authors = ["Aldrin Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
publish = false

[dependencies.aldrin-broker]
version = "0.2.0"
path = "../broker"
default-features = false
features = ["tokio"]

[dependencies.anyhow]
version = "1.0.75"
default-features = false
features = ["std"]

[dependencies.tokio]
version = "1.34.0"
default-features = false
features = [
    "macros",
    "net",
    "rt",
    "sync",
]
