[package]
name = "conformance-test-broker"
description = "Host for aldrin-broker conformance tests."
version = "0.0.0"
authors = ["Aldrin Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71.1"
publish = false

[dependencies]
anyhow = { workspace = true }

[dependencies.aldrin-broker]
path = "../broker"
default-features = false
features = ["tokio"]

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt",
    "sync",
]
