[package]
name = "conformance-test-broker"
description = "Host for aldrin-broker conformance tests."
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

[dependencies.aldrin-broker]
path = "../broker"
default-features = false
features = ["tokio"]

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "net",
    "rt",
    "sync",
]
