[package]
name = "aldrin-conformance-test-shared"
description = "Shared types for Aldrin conformance tests"
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.48"
