[package]
name = "aldrin-conformance-test-shared"
description = "Shared types for Aldrin conformance tests"
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies.serde]
version = "1.0.104"
default-features = false
features = ["derive"]

[dev-dependencies]
serde_json = "1.0.48"
