[package]
name = "aldrin-conformance-tester"
description = "Protocol conformance tester for Aldrin brokers."
version = "0.13.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colorchoice-clap = { workspace = true }
terminal_size = { workspace = true }

[dependencies.aldrin-core]
version = "0.13.0"
path = "../core"
default-features = false
features = ["tokio"]

[dependencies.once_cell]
version = "1.18.0"
default-features = false
features = ["std"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.serde_json]
version = "1.0.108"
default-features = false
features = ["std"]

[dependencies.textwrap]
version = "0.16.2"
default-features = false
features = [
    "unicode-linebreak",
    "unicode-width",
]

[dependencies.tokio]
workspace = true
features = [
    "io-util",
    "net",
    "process",
    "rt-multi-thread",
    "time",
]

[dependencies.uuid]
workspace = true
features = ["serde"]
