[package]
name = "aldrin-core"
description = """
Shared core components of Aldrin, a message bus for service-oriented RPC and interprocess
communication.
"""
version = "0.2.0"
authors = ["Aldrin Contributors"]
repository = "https://github.com/dennis-hamester/aldrin"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
categories = [
    "asynchronous",
    "network-programming",
]
keywords = [
    "async",
    "network",
    "rpc",
    "service",
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
channel = [
    "dep:futures-channel",
    "dep:futures-core",
]
fuzzing = [
    "dep:arbitrary",
    "uuid/arbitrary",
]
new-v4-ids = ["uuid/v4"]
tokio = ["dep:tokio"]

[dependencies.arbitrary]
optional = true
version = "1.3.2"
default-features = false
features = ["derive"]

[dependencies.bytes]
version = "1.5.0"
default-features = false

[dependencies.futures-channel]
optional = true
version = "0.3.29"
default-features = false
features = ["std"]

[dependencies.futures-core]
optional = true
version = "0.3.29"
default-features = false

[dependencies.num_enum]
version = "0.7.1"
default-features = false

[dependencies.pin-project-lite]
version = "0.2.13"
default-features = false

[dependencies.tokio]
optional = true
version = "1.34.0"
default-features = false

[dependencies.uuid]
version = "1.6.1"
default-features = false

[dev-dependencies.aldrin]
path = "../aldrin"

[dev-dependencies.aldrin-broker]
path = "../broker"

[dev-dependencies.futures]
version = "0.3.29"
default-features = false

[dev-dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "rt-multi-thread",
]
