[package]
name = "aldrin-core"
description = """
Shared core components of Aldrin, a message bus for service-oriented RPC and interprocess
communication.
"""
version = "0.12.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[features]
channel = [
    "dep:futures-channel",
    "dep:futures-core",
]
derive = [
    # "dep:aldrin-macros"
]
fuzzing = [
    "dep:arbitrary",
    "uuid/arbitrary",
]
introspection = ["uuid/v5"]
new-v4-ids = ["uuid/v4"]
serde = [
    "dep:serde",
    "uuid/serde",
]
tokio = ["dep:tokio"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

# [dependencies.aldrin-macros]
# optional = true
# version = "0.12.0"
# path = "../macros"
# default-features = false

[dependencies.arbitrary]
optional = true
version = "1.3.2"
default-features = false
features = ["derive"]

[dependencies.bytes]
version = "1.5.0"
default-features = false

[dependencies.futures-channel]
workspace = true
optional = true
features = ["std"]

[dependencies.futures-core]
workspace = true
optional = true

[dependencies.num_enum]
version = "0.7.1"
default-features = false

[dependencies.pin-project-lite]
version = "0.2.13"
default-features = false

[dependencies.serde]
workspace = true
optional = true
features = [
    "derive",
    "std",
]

[dependencies.tokio]
workspace = true
optional = true

[dependencies.uuid]
workspace = true
features = ["std"]

# [dev-dependencies.aldrin]
# path = "../aldrin"
# default-features = false

# [dev-dependencies.aldrin-broker]
# path = "../broker"
# default-features = false

[dev-dependencies.tokio]
workspace = true
features = [
    "macros",
    "rt-multi-thread",
]
