[package]
name = "aldrin-macros"
description = "Aldrin code generation macros."
version = "0.7.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[lib]
proc-macro = true

[dependencies]
aldrin-parser = { workspace = true }

[dependencies.aldrin-codegen]
workspace = true
features = ["rust"]

[dependencies.proc-macro-error]
version = "1.0.4"
default-features = false

[dependencies.proc-macro2]
version = "1.0.69"
default-features = false

[dependencies.syn]
version = "2.0.39"
default-features = false
features = [
    "parsing",
    "printing",
    "proc-macro",
]

[dev-dependencies.aldrin]
workspace = true
features = [
    "codegen",
    "introspection",
]
