[package]
name = "aldrin-macros"
description = "Aldrin macros."
version = "0.8.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[lib]
proc-macro = true

[features]
codegen = [
    "dep:aldrin-parser",
    "dep:aldrin-codegen",
]
derive = [
    "dep:quote",
    "syn/clone-impls",
    "syn/derive",
]

[dependencies.aldrin-parser]
optional = true
version = "0.8.0"
path = "../parser"
default-features = false

[dependencies.aldrin-codegen]
optional = true
version = "0.8.2"
path = "../codegen"
default-features = false
features = ["rust"]

[dependencies.manyhow]
version = "0.11.4"
default-features = false
features = [
    "macros",
    "syn",
]

[dependencies.proc-macro2]
version = "1.0.69"
default-features = false

[dependencies.quote]
optional = true
version = "1.0.33"
default-features = false

[dependencies.syn]
version = "2.0.39"
default-features = false
features = [
    "parsing",
    "printing",
    "proc-macro",
]

[dev-dependencies.aldrin]
path = "../aldrin"
default-features = false
features = [
    "codegen",
    "introspection",
]

[dev-dependencies.aldrin-core]
path = "../core"
default-features = false
features = [
    "derive",
    "introspection",
]
