[package]
name = "aldrin-macros"
description = "Aldrin macros."
version = "0.10.1"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
heck = { workspace = true }

[dependencies.aldrin-parser]
version = "0.10.0"
path = "../parser"
default-features = false

[dependencies.aldrin-codegen]
version = "0.10.0"
path = "../codegen"
default-features = false
features = ["rust"]

[dependencies.manyhow]
version = "0.11.4"
default-features = false
features = [
    "macros",
    "syn",
]

[dependencies.proc-macro2]
version = "1.0.92"
default-features = false

[dependencies.quote]
version = "1.0.38"
default-features = false

[dependencies.syn]
version = "2.0.95"
default-features = false
features = [
    "clone-impls",
    "derive",
    "extra-traits",
    "parsing",
    "printing",
    "proc-macro",
]

[dev-dependencies.aldrin]
path = "../aldrin"
default-features = false
features = [
    "codegen",
    "introspection",
]

[dev-dependencies.aldrin-core]
path = "../core"
default-features = false
features = [
    "derive",
    "introspection",
]

[dev-dependencies.uuid]
workspace = true
