[package]
name = "aldrin-parser"
description = "Aldrin schema parser library."
version = "0.12.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[dependencies]
heck = { workspace = true }

[dependencies.pest]
version = "2.7.15"
default-features = false
features = ["std"]

[dependencies.pest_derive]
version = "2.7.15"
default-features = false
features = ["std"]

[dependencies.strsim]
version = "0.10.0"
default-features = false

[dependencies.unicode-segmentation]
version = "1.10.1"
default-features = false

[dependencies.unicode-width]
version = "0.1.11"
default-features = false

[dependencies.uuid]
workspace = true
features = ["v4"]
