[package]
name = "aldrin-parser"
description = "Aldrin schema parser library."
version = "0.13.0"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[dependencies]
comrak = { workspace = true }
heck = { workspace = true }
thiserror = { workspace = true }

[dependencies.annotate-snippets]
version = "0.12.10"
default-features = false

[dependencies.pest]
version = "2.8.5"
default-features = false
features = ["std"]

[dependencies.pest_derive]
version = "2.8.5"
default-features = false
features = ["std"]

[dependencies.strsim]
version = "0.11.1"
default-features = false

[dev-dependencies]
diffy = { workspace = true }
