[package]
name = "aldrin-proto-macros"
description = "Serialize and Deserialize derive macros for aldrin-proto"
version = "0.1.0"
authors = ["Aldrin Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64.0"

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0.18"
default-features = false

[dependencies.quote]
version = "1.0.23"
default-features = false

[dependencies.syn]
version = "2.0.10"
default-features = false
features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
]

[dev-dependencies.aldrin-proto]
version = "0.1.0"
path = "../proto"
features = ["macros"]
